--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
     <title>Squash The Bugs</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="screen">
@@ -15,47 +15,65 @@
 
     <div class="screen">
       <h1>What Is Your Favorite Bug?</h1>
-      <div class="flex-div">
-        <button class="choose-insect-btn">
-          <img src="bug_01.svg" alt="Ugly Bug" />
-          <p>Bug 1</p>
-        </button>
+      <ul class="insects-list">
+        <li>
+          <button class="choose-insect-btn">
+            <img src="bug_art/bug_01.svg" alt="Ugly Bug" />
+            <p>Bug 1</p>
+          </button>
+        </li>
+        <li>
+          <button class="choose-insect-btn">
+            <img src="bug_art/bug_02.svg" alt="Ugly Bug" />
+            <p>Bug 2</p>
+          </button>
+        </li>
+        <li>
+          <button class="choose-insect-btn">
+            <img src="bug_art/bug_03.svg" alt="Ugly Bug" />
+            <p>Bug 3</p>
+          </button>
+        </li>
+        <li>
+          <button class="choose-insect-btn">
+            <img src="bug_art/bug_04.svg" alt="Ugly Bug" />
+            <p>Bug 4</p>
+          </button>
+        </li>
+        <li>
+          <button class="choose-insect-btn">
+            <img src="bug_art/bug_05.svg" alt="Ugly Bug" />
+            <p>Bug 5</p>
+          </button>
+        </li>
+        <li>
+          <button class="choose-insect-btn">
+            <img src="bug_art/bug_06.svg" alt="Ugly Bug" />
+            <p>Bug 6</p>
+          </button>
+        </li>
+        <li>
+          <button class="choose-insect-btn">
+            <img src="bug_art/bug_07.svg" alt="Ugly Bug" />
+            <p>Bug 7</p>
+          </button>
+        </li>
+        <li>
+          <button class="choose-insect-btn">
+            <img src="bug_art/bug_08.svg" alt="Ugly Bug" />
+            <p>Bug 8</p>
+          </button>
+        </li>
+      </ul>
+    </div>
 
-        <button class="choose-insect-btn">
-          <img src="bug_02.svg" alt="Ugly Bug" />
-          <p>Bug 2</p>
-        </button>
-
-        <button class="choose-insect-btn">
-          <img src="bug_03.svg" alt="Ugly Bug" />
-          <p>Bug 3</p>
-        </button>
-
-        <button class="choose-insect-btn">
-          <img src="bug_04.svg" alt="Ugly Bug" />
-          <p>Bug 4</p>
-        </button>
-
-        <button class="choose-insect-btn">
-          <img src="bug_05.svg" alt="Ugly Bug" />
-          <p>Bug 5</p>
-        </button>
-
-        <button class="choose-insect-btn">
-          <img src="bug_06.svg" alt="Ugly Bug" />
-          <p>Bug 6</p>
-        </button>
-
-        <button class="choose-insect-btn">
-          <img src="bug_07.svg" alt="Ugly Bug" />
-          <p>Bug 7</p>
-        </button>
-
-        <button class="choose-insect-btn">
-          <img src="bug_08.svg" alt="Ugly Bug" />
-          <p>Bug 8</p>
-        </button>
-      </div>
+    <div class="screen game-container">
+      <h3 id="time">Time: 00:00</h3>
+      <h3 id="score">Score: 0</h3>
+      <h5>
+        Are You Annoyed Yet? <br />
+        You Are Playing An Impossible Game
+      </h5>
     </div>
     <script src="script.js"></script>
   </body>
