--- a/index.html
+++ b/index.html
@@ -68,13 +68,15 @@
     </div>
 
     <div class="screen game-container">
-      <h3 id="time">Time: 00:00</h3>
-      <h3 id="score">Score: 0</h3>
-      <h5>
+      <h3 class="time">Time: 00:00</h3>
+      <h3 class="score">Score: 0</h3>
+      <h5 class="message">
         Are You Annoyed Yet? <br />
         You Are Playing An Impossible Game
       </h5>
+      <div class="insect"><img src="bug_art/bug_04.svg" alt="Ugly Bug" /></div>
     </div>
+
     <script src="script.js"></script>
   </body>
 </html>
