--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         Are You Annoyed Yet? <br />
         You Are Playing An Impossible Game
       </h5>
-      <div class="insect"><img src="bug_art/bug_04.svg" alt="Ugly Bug" /></div>
+      <!-- <div class="insect"><img src="bug_art/bug_04.svg" alt="Ugly Bug" /></div> -->
     </div>
 
     <script src="script.js"></script>
